fix: Remove deprecated warning with `new Double`.